vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_chan_init_cap.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_chan_init_cap.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     (chan int{cap: $embed_file(@FILE).len})
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
