vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_chan_init_cap.vv
fn main() {
	(chan int{cap: $embed_file(@FILE).len})
}
